# canopy

./: .env.tpl  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  VERSION  models.yaml  pyproject.toml  registry.yaml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.github/scripts/: docs_sync_check.py
.github/workflows/: docs-sync.yml  gws-tests.yml  hook-compat.yml  python-tests.yml  version-check.yml
docs/: agent-operating-model.md
docs/architecture/: agent-client-rest-contract.md  shared-gog-gdrive.md
docs/plans/: auto-version-narratives.md
evals/: .gitignore
evals/connect/: baseline.json  eval-history.json
hooks/: install.py  post_tool_use.py  pre_tool_use_main_branch_guard.py  pre_tool_use_plugin_cache_guard.py  pre_tool_use_version_bump_guard.py
plugins/canopy/: package.json  tsconfig.json  vitest.config.ts
scripts/: browser-screenshot.py  canopy-auth-preflight.sh  canopy-project-status.sh  canopy-setup.sh  canopy-update-check.sh  chrome-debug.sh  web-control.py
scripts/ddd/: auth.py  deadair.py  escalation.py  findings_review.py  narrative.py  narrative_coherence.py  promote.py  regen_json_schemas.py  render_pacing_audit.py  resolve_ddd_dir.sh  resolve_narrative.py  review.py  run_pipeline.py  runstate.py  snippets.py  spec_qa.py  test_action_marks.py  upload.py  validate.py  verdicts.py  (+2 more)
tests/: test_agent_client.py  test_agent_commands_gen.py  test_agent_coverage.py  test_agent_doctor.py  test_agent_email.py  test_agent_factory.py  test_agent_gdoc.py  test_agent_health.py  test_agent_review.py  test_agent_web.py  test_analyzer.py  test_auth_reexport.py  test_briefing.py  test_builtin_command_collisions.py  test_campaigns.py  test_canopy_web.py  test_capture.py  test_circuit_breaker.py  test_cli.py  test_cli_agent.py  test_cli_agent_publish.py  test_cli_analyze_status.py  test_cli_brief.py  test_cli_eval.py  test_cli_harvest_intent_audit.py  test_cli_improve.py  test_cli_observations_proposals.py  test_cli_patterns.py  test_cli_sessions_project_filter.py  test_cli_version.py  test_command_skill_collisions.py  test_corpus.py  test_ddd_workspace.py  test_digest.py  test_docs_sync_check.py  test_doctor.py  test_eval_rubric.py  test_find_session.py  test_fleet_align.py  test_fleet_session_start_update.py  (+56 more)
video-engine/: .gitignore  README.md  package.json  remotion.config.ts  render_locally.py  tsconfig.json  vo_report.py
(+503 files in other folders)
