[project]
name = "canopy"
version = "0.1.0"
description = "Self-improving MCP orchestration with autoresearch"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
browser = [
    "playwright>=1.40",
]

[project.scripts]
canopy = "orchestrator.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
markers = [
    "slow: tests that take >1s; skip with -m 'not slow'",
    "integration: end-to-end flow tests touching multiple subsystems",
]

